<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/mobile_navigation"
    app:startDestination="@id/navigation_home">

    <fragment
        android:id="@+id/navigation_home"
        android:name="team.sesh.teamsesh.presentation.home.ui.HomeFragment"
        android:label="@string/title_home"
        tools:layout="@layout/fragment_home" >
        <action
            android:id="@+id/action_navigation_home_to_nav_details_news"
            app:destination="@id/nav_details_news" />
    </fragment>

    <fragment
        android:id="@+id/navigation_merch"
        android:name="team.sesh.teamsesh.presentation.merch.ui.MerchFragment"
        android:label="@string/title_merch"
        tools:layout="@layout/fragment_merch" >


    </fragment>

    <fragment
        android:id="@+id/navigation_events"
        android:name="team.sesh.teamsesh.presentation.events.ui.EventsFragment"
        android:label="@string/title_events"
        tools:layout="@layout/fragment_notifications" >
        <action
            android:id="@+id/action_navigation_notifications_to_nav_details_banners"
            app:destination="@id/nav_details_banners" />
    </fragment>

    <fragment
        android:id="@+id/nav_details_news"
        android:name="team.sesh.teamsesh.presentation.home.ui.NewsDetails"
        android:label="@string/title_home"
        tools:layout="@layout/fragment_details_news">
        <action
            android:id="@+id/action_nav_details_news_to_navigation_home"
            app:destination="@id/navigation_home" />

    </fragment>


    <fragment
        android:id="@+id/nav_details_banners"
        android:name="team.sesh.teamsesh.presentation.events.ui.BannersDetails"
        android:label="@string/events"
        tools:layout="@layout/fragment_details_banners">
        <action
            android:id="@+id/action_nav_details_banners_to_navigation_notifications"
            app:destination="@id/navigation_events" />
    </fragment>

    <fragment
        android:id="@+id/navigation_radio"
        android:name="team.sesh.teamsesh.presentation.radio.RadioFragment"
        android:label="Radio"
        tools:layout="@layout/fragment_radio">
    </fragment>

</navigation>



    <!-- <fragment
        android:id="@+id/navigation_radio"
        android:name="team.sesh.teamsesh.ui.radio.RadioFragment"
        android:label="@string/title_dashboard"
        tools:layout="@layout/fragment_radio" />  -->