<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#00000000"
    android:orientation="vertical">

    <androidx.appcompat.widget.Toolbar
        android:id="@+id/toolbar_main"
        android:layout_width="match_parent"
        android:layout_height="46dp"
        android:theme="@android:style/Theme.Black"
        app:navigationIcon="@drawable/ic_baseline_arrow_back_24"
        app:title="@string/News" />

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <LinearLayout
            android:layout_marginTop="5dp"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <androidx.constraintlayout.widget.ConstraintLayout
                android:layout_width="match_parent"
                android:layout_height="300dp"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent">

                <ImageView
                    android:id="@+id/imageNews"
                    android:layout_width="match_parent"
                    android:layout_height="300dp"
                    android:scaleType="centerCrop"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintHorizontal_bias="1.0"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toTopOf="parent"

                    app:srcCompat="@drawable/teamsesh" />

                <TextView
                    android:id="@+id/textnews"
                    android:layout_width="0dp"
                    android:layout_height="40dp"
                    android:layout_marginTop="260dp"
                    android:background="#7F000000"
                    android:gravity="center_horizontal|center_vertical"
                    android:paddingStart="8dp"
                    android:paddingEnd="8dp"
                    android:text="@string/title"
                    android:textColor="#FFFFFF"
                    android:textSize="18sp"
                    android:textStyle="bold"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintHorizontal_bias="0.0"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toTopOf="parent" />

            </androidx.constraintlayout.widget.ConstraintLayout>

            <TextView
                android:id="@+id/descriptionNews"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:autoLink="web"
                android:paddingTop="12dp"
                android:fontFamily="sans-serif-condensed-medium"
                android:linksClickable="true"
                android:paddingStart="12dp"
                android:paddingEnd="12dp"
                android:text="@string/description"
                android:textAlignment="textStart"
                android:textColor="@color/colorPrimary"
                android:textColorLink="@android:color/holo_blue_dark"
                android:textSize="16sp"
                android:textStyle="normal"
                android:typeface="normal" />
        </LinearLayout>
    </ScrollView>
</LinearLayout>